// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders <Networks /> without throwing 1`] = `
.c2 {
  margin-bottom: 1.125rem;
}

.c12 {
  margin-bottom: 0.75rem;
}

.c10 {
  padding: 8rem;
}

.c6 {
  color: rgb(73,73,73);
  margin: 0;
  line-height: 1.5rem;
  font-size: 0.9375rem;
  margin: 0;
}

.c1 {
  margin-right: auto;
  margin-left: auto;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c4 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.625rem;
  padding-left: 0.625rem;
  display: block;
}

.c0 {
  box-sizing: border-box;
  width: 100%;
  max-width: 78.75rem;
  padding-bottom: 1.125rem;
}

.c7 {
  margin: 0;
  color: rgb(73,73,73);
  font-weight: normal;
  line-height: 1.625rem;
  font-size: 1.3125rem;
}

.c9 {
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  border-width: 0.0625rem;
  border-style: solid;
  -webkit-transition: all 300ms ease;
  transition: all 300ms ease;
  color: rgb(73,73,73);
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c13 {
  color: rgb(151,151,151);
  text-align: center;
}

.c8 {
  width: calc(100% - 0.125rem);
  background: transparent;
}

.c5 {
  font-weight: 200;
}

@media only screen and (min-width:48em) {
  .c1 {
    width: 46rem;
  }
}

@media only screen and (min-width:64em) {
  .c1 {
    width: 56rem;
  }
}

@media only screen and (min-width:75em) {
  .c1 {
    width: 59rem;
  }
}

@media only screen and (min-width:0em) {
  .c4 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media only screen and (min-width:48em) {
  .c4 {
    -webkit-flex-basis: 58.333333333333336%;
    -ms-flex-preferred-size: 58.333333333333336%;
    flex-basis: 58.333333333333336%;
    max-width: 58.333333333333336%;
  }
}

@media only screen and (max-width:37.4375rem) {
  .c0 {
    padding-left: 0.75rem;
    padding-right: 0.75rem;
  }
}

@media only screen and (min-width:37.5rem) and (max-width:62.4375rem) {
  .c0 {
    padding-left: 1.875rem;
    padding-right: 1.875rem;
  }
}

@media only screen and (min-width:62.5rem) and (max-width:87.4375rem) {
  .c0 {
    padding-left: 4.375rem;
    padding-right: 4.375rem;
  }
}

<div
  className="c0 c1"
>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        <p
          className="c5 c6"
        >
          Use predefined or customized fabric networks which can be public-facing or private. All fabrics are isolated from other customers giving you complete control over the network environment. Read more on fabrics.
           
          <a
            href="https://docs.joyent.com/public-cloud/network/sdn"
            rel="noopener noreferrer"
            target="__blank"
          >
            Read the docs
          </a>
        </p>
      </div>
    </div>
  </div>
  <div
    className="c2"
  >
    <h3
      className="c7"
    >
      Networks attached to this instance
    </h3>
  </div>
  <div
    className="c8 c9"
    disabled={false}
    name="card"
  >
    <div
      className="c10"
    >
      <div
        className="c11"
      >
        <div
          className="c12"
        >
          <svg
            height={109}
            viewBox="0 0 119.34 109.47"
            width={119}
            xmlns="http://www.w3.org/2000/svg"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          >
            <defs>
              <style
                dangerouslySetInnerHTML={
                  Object {
                    "__html": ".cls-1{opacity:0.5;}.cls-2{fill:url(#radial-gradient);}.cls-3{fill:url(#radial-gradient-2);}.cls-4{fill:#fff;}.cls-5{fill:url(#radial-gradient-3);}.cls-6{fill:#1b3240;}.cls-7{fill:url(#radial-gradient-4);}",
                  }
                }
              />
              <radialGradient
                cx="208.79"
                cy="99.06"
                gradientTransform="translate(227.6 -122.69) rotate(102.18) scale(1 1.28)"
                gradientUnits="userSpaceOnUse"
                id="radial-gradient"
                r="57.13"
              >
                <stop
                  offset="0.05"
                  stopColor="#436275"
                />
                <stop
                  offset="0.1"
                  stopColor="#415f72"
                />
                <stop
                  offset="0.13"
                  stopColor="#3a5769"
                />
                <stop
                  offset="0.16"
                  stopColor="#2e4959"
                />
                <stop
                  offset="0.19"
                  stopColor="#1d3543"
                />
                <stop
                  offset="0.19"
                  stopColor="#1b3240"
                />
                <stop
                  offset="0.26"
                  stopColor="#1e3644"
                />
                <stop
                  offset="0.32"
                  stopColor="#274150"
                />
                <stop
                  offset="0.39"
                  stopColor="#365364"
                />
                <stop
                  offset="0.43"
                  stopColor="#436275"
                />
                <stop
                  offset="0.49"
                  stopColor="#3f5d6f"
                />
                <stop
                  offset="0.56"
                  stopColor="#324e5f"
                />
                <stop
                  offset="0.65"
                  stopColor="#1e3644"
                />
                <stop
                  offset="0.66"
                  stopColor="#1b3240"
                />
                <stop
                  offset="0.85"
                  stopColor="#1b3240"
                />
                <stop
                  offset="0.9"
                  stopColor="#2c4656"
                />
                <stop
                  offset="0.95"
                  stopColor="#436275"
                />
              </radialGradient>
              <radialGradient
                cx="59.15"
                cy="56.86"
                gradientTransform="matrix(-0.52, 0.85, -1.09, -0.66, 151.75, 43.43)"
                gradientUnits="userSpaceOnUse"
                id="radial-gradient-2"
                r="46.01"
              >
                <stop
                  offset={0}
                  stopColor="#436275"
                />
                <stop
                  offset="0.1"
                  stopColor="#426073"
                />
                <stop
                  offset="0.13"
                  stopColor="#3c5a6c"
                />
                <stop
                  offset="0.16"
                  stopColor="#344f61"
                />
                <stop
                  offset="0.18"
                  stopColor="#274050"
                />
                <stop
                  offset="0.19"
                  stopColor="#1b3240"
                />
                <stop
                  offset="0.26"
                  stopColor="#1e3644"
                />
                <stop
                  offset="0.32"
                  stopColor="#274150"
                />
                <stop
                  offset="0.39"
                  stopColor="#365364"
                />
                <stop
                  offset="0.43"
                  stopColor="#436275"
                />
                <stop
                  offset="0.49"
                  stopColor="#3f5d6f"
                />
                <stop
                  offset="0.56"
                  stopColor="#324e5f"
                />
                <stop
                  offset="0.65"
                  stopColor="#1e3644"
                />
                <stop
                  offset="0.66"
                  stopColor="#1b3240"
                />
                <stop
                  offset="0.85"
                  stopColor="#1b3240"
                />
                <stop
                  offset="0.92"
                  stopColor="#2c4656"
                />
                <stop
                  offset={1}
                  stopColor="#436275"
                />
              </radialGradient>
              <radialGradient
                cx="-521.06"
                cy="366.16"
                gradientTransform="translate(353.22 -558.2) rotate(-21.55) scale(1 1.28)"
                gradientUnits="userSpaceOnUse"
                id="radial-gradient-3"
                r="32.44"
              >
                <stop
                  offset={0}
                  stopColor="#436275"
                />
                <stop
                  offset="0.02"
                  stopColor="#436275"
                  stopOpacity="0.97"
                />
                <stop
                  offset="0.34"
                  stopColor="#436275"
                  stopOpacity="0.55"
                />
                <stop
                  offset="0.62"
                  stopColor="#436275"
                  stopOpacity="0.25"
                />
                <stop
                  offset="0.85"
                  stopColor="#436275"
                  stopOpacity="0.07"
                />
                <stop
                  offset={1}
                  stopColor="#436275"
                  stopOpacity={0}
                />
              </radialGradient>
              <radialGradient
                cx="-136.43"
                cy="140.9"
                gradientTransform="translate(242.58 104.51) rotate(58.19) scale(1 0.7)"
                gradientUnits="userSpaceOnUse"
                id="radial-gradient-4"
                r="54.82"
              >
                <stop
                  offset={0}
                  stopColor="#436275"
                />
                <stop
                  offset="0.58"
                  stopColor="#436275"
                  stopOpacity="0.4"
                />
                <stop
                  offset={1}
                  stopColor="#436275"
                  stopOpacity={0}
                />
              </radialGradient>
            </defs>
            <title>
              Empty-state-illustration
            </title>
            <g
              data-name="Layer 2"
              id="Layer_2"
            >
              <g
                data-name="Layer 1"
                id="Layer_1-2"
              >
                <g
                  className="cls-1"
                >
                  <path
                    className="cls-2"
                    d="M80.06,4.35c-13.32-6.18-29.35-5.57-42.71.53S13.26,22.2,6.63,35.31C1.14,46.16-1.69,58.78,1.08,70.63,3.79,82.22,11.75,92.21,21.73,98.69s21.86,9.66,33.73,10.54c11.45.85,23.26-.43,33.68-5.27,19-8.83,31.51-30,30.09-50.91s-20.11-40-38.57-48.3Z"
                  />
                </g>
                <g
                  className="cls-1"
                >
                  <path
                    className="cls-3"
                    d="M91.49,23.42c-11.21-9.58-24.94-13-38.61-11.88A45.54,45.54,0,0,0,19,32.25a49.05,49.05,0,0,0-5.48,39.52,35.93,35.93,0,0,0,7.15,13.75C26,91.54,33.6,95,41.27,97.28a64.6,64.6,0,0,0,20.16,3,47.46,47.46,0,0,0,32-13.61,44.74,44.74,0,0,0,13.06-32.08,42.49,42.49,0,0,0-15-31.19Z"
                  />
                </g>
                <circle
                  className="cls-4"
                  cx="23.53"
                  cy="73.77"
                  r="11.93"
                />
                <circle
                  className="cls-5"
                  cx="23.53"
                  cy="73.77"
                  r="11.93"
                />
                <circle
                  className="cls-6"
                  cx="61.95"
                  cy="55.24"
                  r="34.25"
                />
                <circle
                  className="cls-7"
                  cx="61.95"
                  cy="55.24"
                  r="34.25"
                />
              </g>
            </g>
          </svg>
        </div>
        <h3
          className="c13 c7"
        >
          You have no networks attached to this instance
        </h3>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders <Networks error /> without throwing 1`] = `
.c2 {
  margin-bottom: 1.125rem;
}

.c8 {
  margin-bottom: 1.875rem;
}

.c6 {
  color: rgb(73,73,73);
  margin: 0;
  line-height: 1.5rem;
  font-size: 0.9375rem;
  margin: 0;
}

.c1 {
  margin-right: auto;
  margin-left: auto;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c4 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.625rem;
  padding-left: 0.625rem;
  display: block;
}

.c0 {
  box-sizing: border-box;
  width: 100%;
  max-width: 78.75rem;
  padding-bottom: 1.125rem;
}

.c7 {
  margin: 0;
  color: rgb(73,73,73);
  font-weight: normal;
  line-height: 1.625rem;
  font-size: 1.3125rem;
}

.c12 {
  margin: 0;
  color: rgb(73,73,73);
  font-weight: 400;
  line-height: 1.5rem;
  font-size: 0.9375rem;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  background-color: rgb(255,255,255);
  box-shadow: 0 0.125rem 0 0 rgba(0,0,0,0.05);
  border: 0.0625rem solid rgb(216,216,216);
  border-radius: 0.1875rem;
  width: 100%;
}

.c10 {
  border-radius: 0.1875rem 0 0 0.1875rem;
  min-width: 0.75rem;
  background-color: rgb(0,152,88);
  background-color: rgb(210,67,58);
}

.c11 {
  padding: 1.125rem 1.125rem;
}

.c13 {
  line-height: 0.875rem;
  font-size: 0.8125rem;
}

.c5 {
  font-weight: 200;
}

@media only screen and (min-width:48em) {
  .c1 {
    width: 46rem;
  }
}

@media only screen and (min-width:64em) {
  .c1 {
    width: 56rem;
  }
}

@media only screen and (min-width:75em) {
  .c1 {
    width: 59rem;
  }
}

@media only screen and (min-width:0em) {
  .c4 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media only screen and (min-width:48em) {
  .c4 {
    -webkit-flex-basis: 58.333333333333336%;
    -ms-flex-preferred-size: 58.333333333333336%;
    flex-basis: 58.333333333333336%;
    max-width: 58.333333333333336%;
  }
}

@media only screen and (max-width:37.4375rem) {
  .c0 {
    padding-left: 0.75rem;
    padding-right: 0.75rem;
  }
}

@media only screen and (min-width:37.5rem) and (max-width:62.4375rem) {
  .c0 {
    padding-left: 1.875rem;
    padding-right: 1.875rem;
  }
}

@media only screen and (min-width:62.5rem) and (max-width:87.4375rem) {
  .c0 {
    padding-left: 4.375rem;
    padding-right: 4.375rem;
  }
}

<div
  className="c0 c1"
>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        <p
          className="c5 c6"
        >
          Use predefined or customized fabric networks which can be public-facing or private. All fabrics are isolated from other customers giving you complete control over the network environment. Read more on fabrics.
           
          <a
            href="https://docs.joyent.com/public-cloud/network/sdn"
            rel="noopener noreferrer"
            target="__blank"
          >
            Read the docs
          </a>
        </p>
      </div>
    </div>
  </div>
  <div
    className="c2"
  >
    <h3
      className="c7"
    >
      Networks attached to this instance
    </h3>
  </div>
  <div
    className="c8"
  >
    <div
      className="c9"
    >
      <div
        className="c10"
      />
      <div
        className="c11"
      >
        <h4
          className="c12"
        >
          Ooops!
        </h4>
        <p
          className="c13 c6"
        >
          An error occurred while loading your networks
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders <Networks loading /> without throwing 1`] = `
.c2 {
  margin-bottom: 1.125rem;
}

.c9 {
  fill: rgb(59,70,204);
  stroke: rgb(59,70,204);
  -webkit-animation: iCqDak 1.5s ease-out 0s infinite;
  animation: iCqDak 1.5s ease-out 0s infinite;
}

.c10 {
  -webkit-animation-delay: 0.5s;
  animation-delay: 0.5s;
}

.c11 {
  -webkit-animation-delay: 1s;
  animation-delay: 1s;
}

.c6 {
  color: rgb(73,73,73);
  margin: 0;
  line-height: 1.5rem;
  font-size: 0.9375rem;
  margin: 0;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 1.25rem;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c12 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  text-align: center;
}

.c1 {
  margin-right: auto;
  margin-left: auto;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c4 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.625rem;
  padding-left: 0.625rem;
  display: block;
}

.c0 {
  box-sizing: border-box;
  width: 100%;
  max-width: 78.75rem;
  padding-bottom: 1.125rem;
}

.c7 {
  margin: 0;
  color: rgb(73,73,73);
  font-weight: normal;
  line-height: 1.625rem;
  font-size: 1.3125rem;
}

.c5 {
  font-weight: 200;
}

@media only screen and (min-width:48em) {
  .c1 {
    width: 46rem;
  }
}

@media only screen and (min-width:64em) {
  .c1 {
    width: 56rem;
  }
}

@media only screen and (min-width:75em) {
  .c1 {
    width: 59rem;
  }
}

@media only screen and (min-width:0em) {
  .c4 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media only screen and (min-width:48em) {
  .c4 {
    -webkit-flex-basis: 58.333333333333336%;
    -ms-flex-preferred-size: 58.333333333333336%;
    flex-basis: 58.333333333333336%;
    max-width: 58.333333333333336%;
  }
}

@media only screen and (max-width:37.4375rem) {
  .c0 {
    padding-left: 0.75rem;
    padding-right: 0.75rem;
  }
}

@media only screen and (min-width:37.5rem) and (max-width:62.4375rem) {
  .c0 {
    padding-left: 1.875rem;
    padding-right: 1.875rem;
  }
}

@media only screen and (min-width:62.5rem) and (max-width:87.4375rem) {
  .c0 {
    padding-left: 4.375rem;
    padding-right: 4.375rem;
  }
}

<div
  className="c0 c1"
>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        <p
          className="c5 c6"
        >
          Use predefined or customized fabric networks which can be public-facing or private. All fabrics are isolated from other customers giving you complete control over the network environment. Read more on fabrics.
           
          <a
            href="https://docs.joyent.com/public-cloud/network/sdn"
            rel="noopener noreferrer"
            target="__blank"
          >
            Read the docs
          </a>
        </p>
      </div>
    </div>
  </div>
  <div
    className="c2"
  >
    <h3
      className="c7"
    >
      Networks attached to this instance
    </h3>
  </div>
  <div
    className="c8"
  >
    <svg
      height="10"
      width="28"
    >
      <rect
        className="c9"
        height="6"
        width="6"
        x="2"
        y="2"
      />
      <rect
        className="c10 c9"
        height="6"
        width="6"
        x="11"
        y="2"
      />
      <rect
        className="c11 c9"
        height="6"
        width="6"
        x="20"
        y="2"
      />
    </svg>
    <p
      className="c12 c6"
    >
      Loading...
    </p>
  </div>
</div>
`;

exports[`renders <Networks networks /> without throwing 1`] = `
.c2 {
  margin-bottom: 1.125rem;
}

.c9 {
  margin-bottom: 1.875rem;
}

.c19 {
  margin-right: 1.875rem;
}

.c22 {
  margin-right: 0.375rem;
}

.c23 {
  margin-top: 1.125rem;
}

.c14 {
  padding-right: 1.125rem;
  padding-left: 1.125rem;
}

.c17 {
  padding: 1.125rem;
}

.c6 {
  color: rgb(73,73,73);
  margin: 0;
  line-height: 1.5rem;
  font-size: 0.9375rem;
  margin: 0;
}

.c1 {
  margin-right: auto;
  margin-left: auto;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c4 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.625rem;
  padding-left: 0.625rem;
  display: block;
}

.c8 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.625rem;
  padding-left: 0.625rem;
  display: block;
}

.c0 {
  box-sizing: border-box;
  width: 100%;
  max-width: 78.75rem;
  padding-bottom: 1.125rem;
}

.c7 {
  margin: 0;
  color: rgb(73,73,73);
  font-weight: normal;
  line-height: 1.625rem;
  font-size: 1.3125rem;
}

.c15 {
  margin: 0;
  color: rgb(73,73,73);
  font-weight: 400;
  line-height: 1.5rem;
  font-size: 0.9375rem;
  -webkit-text-fill-color: currentcolor;
  color: rgb(255,255,255);
}

.c10 {
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  border-width: 0.0625rem;
  border-style: solid;
  -webkit-transition: all 300ms ease;
  transition: all 300ms ease;
  color: rgb(73,73,73);
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
}

.c12 {
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  border-width: 0.0625rem;
  border-style: solid;
  -webkit-transition: all 300ms ease;
  transition: all 300ms ease;
  color: rgb(73,73,73);
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
  color: rgb(255,255,255);
  background-color: rgb(59,70,204);
  border-color: rgb(45,56,132);
  min-height: auto;
  height: 2.875rem;
  -webkit-flex: 0 0 2.875rem;
  -ms-flex: 0 0 2.875rem;
  flex: 0 0 2.875rem;
}

.c24 {
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  border-width: 0.0625rem;
  border-style: solid;
  -webkit-transition: all 300ms ease;
  transition: all 300ms ease;
  color: rgb(73,73,73);
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
  cursor: pointer;
  min-height: auto;
  height: 2.875rem;
  -webkit-flex: 0 0 2.875rem;
  -ms-flex: 0 0 2.875rem;
  flex: 0 0 2.875rem;
}

.c27 {
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  border-width: 0.0625rem;
  border-style: solid;
  -webkit-transition: all 300ms ease;
  transition: all 300ms ease;
  color: rgb(73,73,73);
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
  min-height: auto;
  height: 2.875rem;
  -webkit-flex: 0 0 2.875rem;
  -ms-flex: 0 0 2.875rem;
  flex: 0 0 2.875rem;
}

.c16 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-width: 0;
  background-color: transparent;
}

.c11 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  z-index: 1;
  line-height: 1.5rem;
  max-width: 100%;
  border-top: 0;
  border-left: 0;
  border-right: 0;
}

.c25 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  z-index: 1;
  line-height: 1.5rem;
  max-width: 100%;
  border-top: 0;
  border-left: 0;
  border-right: 0;
  box-shadow: none;
}

.c26 {
  width: 2.875rem;
  min-width: 2.875rem;
  min-height: 2.875rem;
  max-width: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border-width: 0;
  border-radius: 0;
  box-shadow: none;
}

.c13 {
  box-sizing: border-box;
  min-height: 2.9375rem;
  max-width: 100%;
  width: auto;
  height: auto;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  overflow: hidden;
  background-color: transparent;
  border-width: 0;
  box-shadow: none;
  color: inherit;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c20 {
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  display: block;
}

.c5 {
  font-weight: 200;
}

@media (min-width:46.0625em) {
  .c17 {
    padding: 1.875rem;
  }
}

@media only screen and (min-width:48em) {
  .c1 {
    width: 46rem;
  }
}

@media only screen and (min-width:64em) {
  .c1 {
    width: 56rem;
  }
}

@media only screen and (min-width:75em) {
  .c1 {
    width: 59rem;
  }
}

@media only screen and (min-width:0em) {
  .c4 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media only screen and (min-width:48em) {
  .c4 {
    -webkit-flex-basis: 58.333333333333336%;
    -ms-flex-preferred-size: 58.333333333333336%;
    flex-basis: 58.333333333333336%;
    max-width: 58.333333333333336%;
  }
}

@media only screen and (min-width:0em) {
  .c8 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media only screen and (min-width:48em) {
  .c8 {
    -webkit-flex-basis: 66.66666666666667%;
    -ms-flex-preferred-size: 66.66666666666667%;
    flex-basis: 66.66666666666667%;
    max-width: 66.66666666666667%;
  }
}

@media only screen and (max-width:37.4375rem) {
  .c0 {
    padding-left: 0.75rem;
    padding-right: 0.75rem;
  }
}

@media only screen and (min-width:37.5rem) and (max-width:62.4375rem) {
  .c0 {
    padding-left: 1.875rem;
    padding-right: 1.875rem;
  }
}

@media only screen and (min-width:62.5rem) and (max-width:87.4375rem) {
  .c0 {
    padding-left: 4.375rem;
    padding-right: 4.375rem;
  }
}

<div
  className="c0 c1"
>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        <p
          className="c5 c6"
        >
          Use predefined or customized fabric networks which can be public-facing or private. All fabrics are isolated from other customers giving you complete control over the network environment. Read more on fabrics.
           
          <a
            href="https://docs.joyent.com/public-cloud/network/sdn"
            rel="noopener noreferrer"
            target="__blank"
          >
            Read the docs
          </a>
        </p>
      </div>
    </div>
  </div>
  <div
    className="c2"
  >
    <h3
      className="c7"
    >
      Networks attached to this instance
    </h3>
  </div>
  <div
    className="c3"
  >
    <div
      className="c8"
    >
      <div
        className="c9"
      >
        <div
          className="c10"
          disabled={false}
          name="card"
        >
          <div
            className="c11 c12"
            disabled={false}
            name="card-header"
          >
            <div
              className="c13 c12"
              disabled={false}
              name="card-header-meta"
            >
              <div
                className="c14"
              >
                <h4
                  className="c15"
                >
                  name
                </h4>
              </div>
            </div>
          </div>
          <div
            className="c16 c10"
            disabled={false}
            name="card-outlet"
          >
            <div
              className="c17"
            >
              <div
                className="c2"
              >
                <p
                  className="c6"
                >
                  description
                </p>
              </div>
              <div
                className="c18"
              >
                <div
                  className="c19"
                >
                  <div
                    className="c20"
                  >
                    <div
                      className="c21"
                    >
                      <div
                        className="c20"
                      >
                        <div
                          className="c22"
                        >
                          <svg
                            height="16"
                            style={
                              Object {
                                "transform": "rotate(0deg)",
                              }
                            }
                            viewBox="0 0 12 16"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M10,6V4A4,4,0,0,0,2,4V6H2A2,2,0,0,0,0,8v6a2,2,0,0,0,2,2h8a2,2,0,0,0,2-2V8A2,2,0,0,0,10,6ZM4,4c0-1.65.35-2,2-2s2,.35,2,2V6H4Zm6,9a1,1,0,0,1-1,1H3a1,1,0,0,1-1-1V9A1,1,0,0,1,3,8H9a1,1,0,0,1,1,1ZM6,13H6a1,1,0,0,1-1-1V10A1,1,0,0,1,6,9H6a1,1,0,0,1,1,1v2A1,1,0,0,1,6,13Z"
                              fill="rgb(73, 73, 73)"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        className="c20"
                      >
                        <p
                          className="c6"
                        >
                          Private
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="c19"
                >
                  <div
                    className="c20"
                  >
                    <div
                      className="c21"
                    >
                      <div
                        className="c20"
                      >
                        <div
                          className="c22"
                        >
                          <svg
                            height="16.2"
                            viewBox="0 0 16.2 16.2"
                            width="16.2"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M16.2,6.61a17.42,17.42,0,0,0-3.37-.26,11.67,11.67,0,0,1-.47-4A15.72,15.72,0,0,1,16,2.59l.2-1a16,16,0,0,0-3.77-.24A11,11,0,0,1,12.59.2l-1-.2a14.09,14.09,0,0,0-.2,1.46A8.44,8.44,0,0,0,7.82,2.68c-.15.1-.31.19-.47.28A15.07,15.07,0,0,1,7.59.2l-1-.2a16.37,16.37,0,0,0-.26,3.37,11.66,11.66,0,0,1-4,.46A15.6,15.6,0,0,1,2.59.2l-1-.2a16.29,16.29,0,0,0-.25,3.77C.67,3.7.21,3.61.2,3.61l-.2,1c.07,0,.63.12,1.46.19a8.48,8.48,0,0,0,1.22,3.6A5.3,5.3,0,0,1,3,8.85,17.52,17.52,0,0,1,.2,8.61l-.2,1a16.66,16.66,0,0,0,3,.26h.4a11.71,11.71,0,0,1,.46,4A17,17,0,0,1,.2,13.61l-.2,1a16.66,16.66,0,0,0,3,.26l.8,0c-.07.7-.16,1.16-.16,1.17l1,.2c0-.07.12-.63.19-1.46a8.49,8.49,0,0,0,3.6-1.23c.15-.1.3-.18.46-.27A16.88,16.88,0,0,1,8.61,16l1,.2a17,17,0,0,0,.25-3.37,11.73,11.73,0,0,1,4-.47A17.13,17.13,0,0,1,13.61,16l1,.2a17.28,17.28,0,0,0,.24-3.77,11,11,0,0,1,1.17.16l.2-1a14.09,14.09,0,0,0-1.46-.2,8.45,8.45,0,0,0-1.23-3.59c-.1-.15-.18-.31-.27-.47A15.07,15.07,0,0,1,16,7.59ZM8.38,3.51a7.26,7.26,0,0,1,3-1,13.17,13.17,0,0,0,.44,3.93,9.35,9.35,0,0,0-3.51,1A8.4,8.4,0,0,1,7.39,4,6.75,6.75,0,0,0,8.38,3.51ZM2.48,4.84H3a12.4,12.4,0,0,0,3.44-.44,9.35,9.35,0,0,0,1,3.51A8.38,8.38,0,0,1,4,8.8a6.18,6.18,0,0,0-.53-1A7.36,7.36,0,0,1,2.48,4.84Zm5.34,7.84a7.22,7.22,0,0,1-3,1A12.61,12.61,0,0,0,4.4,9.78a9,9,0,0,0,3.52-1,8.43,8.43,0,0,1,.88,3.37A7.11,7.11,0,0,0,7.82,12.68Zm5.9-1.33a13.23,13.23,0,0,0-3.94.44,9,9,0,0,0-1-3.51,8.44,8.44,0,0,1,3.38-.89,6.69,6.69,0,0,0,.52,1A7.13,7.13,0,0,1,13.72,11.35Z"
                              fill="rgb(73, 73, 73)"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        className="c20"
                      >
                        <p
                          className="c6"
                        >
                          Fabric network
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
                <span
                  name="react-responsive-mock"
                  query="only screen and (min-width: 37.5rem)"
                >
                  <div
                    className="c19"
                  >
                    <div
                      className="c20"
                    >
                      <div
                        className="c21"
                      >
                        <div
                          className="c20"
                        >
                          <div
                            className="c22"
                          >
                            <svg
                              height="17"
                              style={
                                Object {
                                  "transform": "rotate(0deg)",
                                }
                              }
                              version="1.1"
                              viewBox="0 0 17 17"
                              width="17"
                              xmlns="http://www.w3.org/2000/svg"
                              xmlnsXlink="http://www.w3.org/1999/xlink"
                            >
                              <g
                                transform="translate(-1105 974)"
                              >
                                <g>
                                  <g>
                                    <use
                                      fill="rgb(73, 73, 73)"
                                      transform="translate(1105 -974)"
                                      xlinkHref="#c"
                                    />
                                  </g>
                                  <g>
                                    <use
                                      fill="rgb(73, 73, 73)"
                                      transform="translate(1111 -974)"
                                      xlinkHref="#c"
                                    />
                                  </g>
                                  <g>
                                    <use
                                      fill="rgb(73, 73, 73)"
                                      transform="translate(1117 -974)"
                                      xlinkHref="#c"
                                    />
                                  </g>
                                  <g>
                                    <use
                                      fill="rgb(73, 73, 73)"
                                      transform="translate(1105 -968)"
                                      xlinkHref="#c"
                                    />
                                  </g>
                                  <g>
                                    <g>
                                      <use
                                        fill="rgb(73, 73, 73)"
                                        transform="translate(1111 -968)"
                                        xlinkHref="#d"
                                      />
                                    </g>
                                  </g>
                                  <g>
                                    <g>
                                      <use
                                        fill="rgb(73, 73, 73)"
                                        transform="translate(1117 -968)"
                                        xlinkHref="#d"
                                      />
                                    </g>
                                  </g>
                                  <g>
                                    <g>
                                      <use
                                        fill="rgb(73, 73, 73)"
                                        transform="translate(1105 -962)"
                                        xlinkHref="#d"
                                      />
                                    </g>
                                  </g>
                                  <g>
                                    <g>
                                      <use
                                        fill="rgb(73, 73, 73)"
                                        transform="translate(1111 -962)"
                                        xlinkHref="#d"
                                      />
                                    </g>
                                  </g>
                                  <g>
                                    <g>
                                      <use
                                        fill="rgb(73, 73, 73)"
                                        transform="translate(1117 -962)"
                                        xlinkHref="#d"
                                      />
                                    </g>
                                  </g>
                                </g>
                              </g>
                              <defs>
                                <path
                                  d="M 2.5 5C 3.88071 5 5 3.88071 5 2.5C 5 1.11929 3.88071 0 2.5 0C 1.11929 0 0 1.11929 0 2.5C 0 3.88071 1.11929 5 2.5 5Z"
                                  id="c"
                                />
                                <path
                                  d="M 2.5 1C 3.3 1 4 1.7 4 2.5C 4 3.3 3.3 4 2.5 4C 1.7 4 1 3.3 1 2.5C 1 1.7 1.7 1 2.5 1ZM 2.5 0C 1.1 0 0 1.1 0 2.5C 0 3.9 1.1 5 2.5 5C 3.9 5 5 3.9 5 2.5C 5 1.1 3.9 0 2.5 0Z"
                                  id="d"
                                />
                              </defs>
                            </svg>
                          </div>
                        </div>
                        <div
                          className="c20"
                        >
                          <p
                            className="c6"
                          >
                            2 instances
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                </span>
              </div>
              <span
                name="react-responsive-mock"
                query="only screen and (max-width: 37.4375rem)"
              >
                <div
                  className="c18"
                >
                  <div
                    className="c19"
                  >
                    <div
                      className="c20"
                    >
                      <div
                        className="c21"
                      >
                        <div
                          className="c20"
                        >
                          <div
                            className="c22"
                          >
                            <svg
                              height="17"
                              style={
                                Object {
                                  "transform": "rotate(0deg)",
                                }
                              }
                              version="1.1"
                              viewBox="0 0 17 17"
                              width="17"
                              xmlns="http://www.w3.org/2000/svg"
                              xmlnsXlink="http://www.w3.org/1999/xlink"
                            >
                              <g
                                transform="translate(-1105 974)"
                              >
                                <g>
                                  <g>
                                    <use
                                      fill="rgb(73, 73, 73)"
                                      transform="translate(1105 -974)"
                                      xlinkHref="#c"
                                    />
                                  </g>
                                  <g>
                                    <use
                                      fill="rgb(73, 73, 73)"
                                      transform="translate(1111 -974)"
                                      xlinkHref="#c"
                                    />
                                  </g>
                                  <g>
                                    <use
                                      fill="rgb(73, 73, 73)"
                                      transform="translate(1117 -974)"
                                      xlinkHref="#c"
                                    />
                                  </g>
                                  <g>
                                    <use
                                      fill="rgb(73, 73, 73)"
                                      transform="translate(1105 -968)"
                                      xlinkHref="#c"
                                    />
                                  </g>
                                  <g>
                                    <g>
                                      <use
                                        fill="rgb(73, 73, 73)"
                                        transform="translate(1111 -968)"
                                        xlinkHref="#d"
                                      />
                                    </g>
                                  </g>
                                  <g>
                                    <g>
                                      <use
                                        fill="rgb(73, 73, 73)"
                                        transform="translate(1117 -968)"
                                        xlinkHref="#d"
                                      />
                                    </g>
                                  </g>
                                  <g>
                                    <g>
                                      <use
                                        fill="rgb(73, 73, 73)"
                                        transform="translate(1105 -962)"
                                        xlinkHref="#d"
                                      />
                                    </g>
                                  </g>
                                  <g>
                                    <g>
                                      <use
                                        fill="rgb(73, 73, 73)"
                                        transform="translate(1111 -962)"
                                        xlinkHref="#d"
                                      />
                                    </g>
                                  </g>
                                  <g>
                                    <g>
                                      <use
                                        fill="rgb(73, 73, 73)"
                                        transform="translate(1117 -962)"
                                        xlinkHref="#d"
                                      />
                                    </g>
                                  </g>
                                </g>
                              </g>
                              <defs>
                                <path
                                  d="M 2.5 5C 3.88071 5 5 3.88071 5 2.5C 5 1.11929 3.88071 0 2.5 0C 1.11929 0 0 1.11929 0 2.5C 0 3.88071 1.11929 5 2.5 5Z"
                                  id="c"
                                />
                                <path
                                  d="M 2.5 1C 3.3 1 4 1.7 4 2.5C 4 3.3 3.3 4 2.5 4C 1.7 4 1 3.3 1 2.5C 1 1.7 1.7 1 2.5 1ZM 2.5 0C 1.1 0 0 1.1 0 2.5C 0 3.9 1.1 5 2.5 5C 3.9 5 5 3.9 5 2.5C 5 1.1 3.9 0 2.5 0Z"
                                  id="d"
                                />
                              </defs>
                            </svg>
                          </div>
                        </div>
                        <div
                          className="c20"
                        >
                          <p
                            className="c6"
                          >
                            2 instances
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </span>
              <div
                className="c23"
              >
                <div
                  className="c24"
                  disabled={false}
                  name="card"
                >
                  <div
                    className="c25 c24"
                    disabled={false}
                    name="card-header"
                    onClick={[Function]}
                  >
                    <div
                      className="c13 c24"
                      disabled={false}
                      name="card-header-meta"
                    >
                      <div
                        className="c14"
                      >
                        <p
                          className="c6"
                        >
                          Network information
                        </p>
                      </div>
                    </div>
                    <div
                      className="c26 c27"
                      disabled={false}
                      name="card-header-box"
                    >
                      <svg
                        height="6"
                        style={
                          Object {
                            "transform": "rotate(0deg)",
                          }
                        }
                        viewBox="0 0 9.6 6"
                        width="9.6"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M9.6,1.12,8.24,0,4.8,3.5,1.36,0,0,1.12,4.8,6Z"
                          fill="rgb(73, 73, 73)"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="c23"
              >
                <div
                  className="c24"
                  disabled={false}
                  name="card"
                >
                  <div
                    className="c25 c24"
                    disabled={false}
                    name="card-header"
                    onClick={[Function]}
                  >
                    <div
                      className="c13 c24"
                      disabled={false}
                      name="card-header-meta"
                    >
                      <div
                        className="c14"
                      >
                        <p
                          className="c6"
                        >
                          Instances on network
                        </p>
                      </div>
                    </div>
                    <div
                      className="c26 c27"
                      disabled={false}
                      name="card-header-box"
                    >
                      <svg
                        height="6"
                        style={
                          Object {
                            "transform": "rotate(0deg)",
                          }
                        }
                        viewBox="0 0 9.6 6"
                        width="9.6"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M9.6,1.12,8.24,0,4.8,3.5,1.36,0,0,1.12,4.8,6Z"
                          fill="rgb(73, 73, 73)"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c3"
  >
    <div
      className="c8"
    >
      <div
        className="c9"
      >
        <div
          className="c10"
          disabled={false}
          name="card"
        >
          <div
            className="c11 c12"
            disabled={false}
            name="card-header"
          >
            <div
              className="c13 c12"
              disabled={false}
              name="card-header-meta"
            >
              <div
                className="c14"
              >
                <h4
                  className="c15"
                >
                  name2
                </h4>
              </div>
            </div>
          </div>
          <div
            className="c16 c10"
            disabled={false}
            name="card-outlet"
          >
            <div
              className="c17"
            >
              <div
                className="c2"
              >
                <p
                  className="c6"
                >
                  description2
                </p>
              </div>
              <div
                className="c18"
              >
                <div
                  className="c19"
                >
                  <div
                    className="c20"
                  >
                    <div
                      className="c21"
                    >
                      <div
                        className="c20"
                      >
                        <div
                          className="c22"
                        >
                          <svg
                            height="16"
                            style={
                              Object {
                                "transform": "rotate(0deg)",
                              }
                            }
                            viewBox="0 0 12 16"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M10,6V4A4,4,0,0,0,2,4V6H2A2,2,0,0,0,0,8v6a2,2,0,0,0,2,2h8a2,2,0,0,0,2-2V8A2,2,0,0,0,10,6ZM4,4c0-1.65.35-2,2-2s2,.35,2,2V6H4Zm6,9a1,1,0,0,1-1,1H3a1,1,0,0,1-1-1V9A1,1,0,0,1,3,8H9a1,1,0,0,1,1,1ZM6,13H6a1,1,0,0,1-1-1V10A1,1,0,0,1,6,9H6a1,1,0,0,1,1,1v2A1,1,0,0,1,6,13Z"
                              fill="rgb(73, 73, 73)"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        className="c20"
                      >
                        <p
                          className="c6"
                        >
                          Private
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="c19"
                >
                  <div
                    className="c20"
                  >
                    <div
                      className="c21"
                    >
                      <div
                        className="c20"
                      >
                        <div
                          className="c22"
                        >
                          <svg
                            height="13"
                            viewBox="0 0 9 13"
                            width="9"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M0,0V13H9V0ZM7,11H2V2H7ZM3,4H6V3H3ZM3,6H6V5H3ZM3,8H6V7H3Z"
                              fill="rgb(73, 73, 73)"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        className="c20"
                      >
                        <p
                          className="c6"
                        >
                          Data center network
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
                <span
                  name="react-responsive-mock"
                  query="only screen and (min-width: 37.5rem)"
                />
              </div>
              <span
                name="react-responsive-mock"
                query="only screen and (max-width: 37.4375rem)"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
